TheProject/manifests/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-with-kubernetes-broadcaster
  namespace: the-project
spec:
  replicas: 6
  selector:
    matchLabels:
      app: devops-with-kubernetes-broadcaster
  template:
    metadata:
      labels:
        app: devops-with-kubernetes-broadcaster
    spec:
      containers:
        - name: devops-with-kubernetes-broadcaster
          image: eetujukka/devops-with-kubernetes-broadcaster:1.2
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 96Mi
