TheProject/manifests/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devops-with-kubernetes-project-ss
  namespace: the-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-with-kubernetes-project
  template:
    metadata:
      labels:
        app: devops-with-kubernetes-project
    spec:
      volumes:
        - name: image-volume
          persistentVolumeClaim:
            claimName: the-project-v2-claim
        - name: app-config-volume
          configMap:
            name: the-project-config-map
      containers:
        - name: devops-with-kubernetes-frontend
          image: eetujukka/devops-with-kubernetes-frontend:1.3
          resources:
            requests:
              cpu: 10m
              memory: 96Mi
            limits:
              cpu: 200m
              memory: 192Mi
          command: ["sh", "-c"]
          args:
            - npm run preview -- --port ${PORT:-3000}
          volumeMounts:
            - name: image-volume
              mountPath: /usr/src/app/files
            - name: app-config-volume
              mountPath: /app/dist/config
              readOnly: true
        - name: devops-with-kubernetes-backend
          image: eetujukka/devops-with-kubernetes-backend:1.4
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          volumeMounts:
            - name: image-volume
              mountPath: /usr/src/app/files
        - name: the-project-postgres
          image: postgres:18.4-alpine3.24
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: the-project-postgres-data-storage
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: the-project-postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 1Gi
