TheProject/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-with-kubernetes-frontend-svc
  namespace: the-project
spec:
  type: ClusterIP
  selector:
    app: devops-with-kubernetes-project
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: devops-with-kubernetes-backend-svc
  namespace: the-project
  annotations:
    cloud.google.com/backend-config: '{"default":"the-project-backend-config"}'
spec:
  type: ClusterIP
  selector:
    app: devops-with-kubernetes-project
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
